# cpp23-katas

./: .bazelrc  BUILD  LICENSE  MODULE.bazel  README.md
.devcontainer/: .clang-tidy  Dockerfile  apt-packages.in  devcontainer.json
.devcontainer/scripts/: initialize
.github/scripts/: benchmarks.sh  git-changed-files.sh  sca-clang-tidy.sh  sca-cppcheck.sh  style-buildifier.sh  style-clang-format.sh
.github/workflows/: ci.yml
katas/day1/: BUILD  README.md
katas/day1/src/: day1.cpp  day1.hpp  test_day1.cpp
katas/day2/: BUILD  README.md
katas/day2/src/: day2.hpp  test_day2.cpp
katas/day3/: BUILD  README.md
katas/day3/src/: benchmark_day3.cpp  day3.cpp  day3.hpp  test_day3.cpp
src/app/: BUILD
src/app/include/app/: app.hpp
src/app/src/: app.cpp  main.cpp
src/app/test/: test_lib.cpp
tools/toolchains/: BUILD  cc_toolchain-linux-clang-18-x86_64.bzl
