# MODULE.bazel
#
# This file defines the module configuration for the Bazel project.
# A module is a collection of Bazel packages that are released, versioned,
# and maintained together.
#
# The module configuration specifies metadata about the module, such as:
# - Module name
# - Dependencies on other modules
# - Version information
# - Repository rules and their configurations
#
# See https://bazel.build/external/module for more details on Bazel modules.

"""Configuration for the cpp-devcontainer Bazel module."""

module(
    name = "cpp-devcontainer",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
register_toolchains(
    "//tools/toolchains:cc_toolchain_for_linux_x86_64",
)

bazel_dep(name = "rules_cc", version = "0.1.3")

bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "google_benchmark", version = "1.9.4")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
